# potty

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  release.yml
assets/: icon-64.rgba
docs/: attention-feed.md  remote-sessions.md
packaging/fedora/: io.github.decaychain.potty.desktop  potty.spec.in
packaging/macos/: build.sh
packaging/windows/: potty.nsi
src/: clip.rs  config.rs  gridr.rs  lib.rs  main.rs  notify.rs  proto.rs  remote.rs  term_env.rs  workspace.rs
tests/: remote_persist.rs  remote_session.rs  remote_ssh.rs
