[package]
name = "potty"
version = "0.1.0"
edition = "2024"

[dependencies]
alacritty_terminal = "0.26.0"
# Tiny (no proc-macro) arg parser for the `potty-notify` helper.
lexopt = "0.3"
bytemuck = { version = "1.25.0", features = ["derive"] }
cosmic-text = "0.18"
egui = "0.34.3"
egui-wgpu = "0.34.3"
egui-winit = "0.34.3"
notify = "8.2.0"
pollster = "0.4.0"
portable-pty = "0.9.0"
raw-window-handle = "0.6.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "1.1.2"
# Format-preserving TOML edits, for `potty-notify --install-hook codex`. Already in the tree as a
# transitive dep of `toml`, so this adds no new crate.
toml_edit = "0.25"
wgpu = "29"
winit = "0.30"

# Clipboard is platform-specific. On Linux/Wayland we use smithay-clipboard (our own seat, no
# XWayland); on Windows the Win32 clipboard via arboard. See src/clip.rs.
[target.'cfg(target_os = "linux")'.dependencies]
smithay-clipboard = "0.7.3"

[target.'cfg(windows)'.dependencies]
# Text only — skip the default image-data feature (and its `image` dependency).
arboard = { version = "3", default-features = false }

[target.'cfg(windows)'.build-dependencies]
# Embeds assets/icon.ico into the .exe (build.rs).
winresource = "0.1"
